@@ -7,6 +7,7 @@
   further Windoze support (test/io5.c works, gatling still doesn't)
     This is just to get gatling to work, I may remove it again after
     that.
+  implement Nikola's idea to remove limit number of strings in errmsg
 
 0.24:
   fix scan_to_sa (Tim Lorenz)
